--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h4 class="modal-title">Your Saplings</h4>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <button type="button" class="close" data-dismiss="modal" onclick="clearModal()">&times;</button>
                     </div>
                     <div class="modal-body">
                       
@@ -89,22 +89,18 @@
               </div>
 		  </div>
 		 </div>
-		<div class="Nursery__map">	
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-            <div class="elfsight-app-f8f82eb2-413d-41f1-a60f-e2a063fe4c86"></div>
-		</div>
+		<div id="map" class="Nursery__map"></div>
+	    <script>
+	      var map;
+	      function initMap() {
+	        map = new google.maps.Map(document.getElementById('map'), {
+	          center: {lat: -34.397, lng: 150.644},
+	          zoom: 8
+	        });
+	      }
+	    </script>	
 	</body>
-<!--
-    <script>
-        function myMap() {
-            var mapProp= {
-              center:new google.maps.LatLng(51.508742,-0.120850),
-              zoom:5,
-            };
-            var map = new google.maps.Map(document.querySelector(".Nursery__map"),mapProp);
-        }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHd8XHE_FohrzFi1JmqWrutekSlrHb_Ls&callback=myMap"></script>
--->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqj4QoHAvwkLxhzLt3LBMpQ3SC2v8_boQ&callback=initMap"
+		    async defer></script>
 	<script type="text/javascript" src="script.js"></script>
 </html>
