--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		  	<br>
 		  	<button class="reserve" type="button" data-toggle="modal" data-target="#myModal">RESERVE MY SAPLING</button>
               <p class="note">A minimum billing of INR 10 requires to complete booking</p>
-              <div class="modal" id="myModal">
+              <div class="modal">
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
